--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ohri/openmrs-esm-ohri",
   "private": true,
+  "version": "2.1.0",
   "description": "OHRI MicroFrontend for OpenMRS SPA",
   "workspaces": [
     "packages/*"
