--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,6 +70,9 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
+      - name: Fetch latest changes
+        run: git fetch
+
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install --immutable
