--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -63,23 +63,29 @@ jobs:
           node-version: '18'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Use full Git path
+        run: |
+          git --version
+          yarn version ...
+
+      - name: Display environment variables
+        run: env
+
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          path: |
+            **/node_modules
+            **/yarn.lock
+
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install --immutable
-
-      - name: Fetch latest changes
-        run: git fetch
-
-      - name: Checkout the branch
-        run: git checkout dev
-
 
       - name: Version
         run: yarn workspaces foreach --worktree --topological --exclude @ohri/openmrs-esm-ohri version "$(node -e "console.log(require('semver').inc(require('./package.json').version, 'patch'))")-pre.${{ github.run_number }}"
