--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Use full Git path
         run: |
           git --version
-          yarn version ...
+          yarn --version
 
       - name: Display environment variables
         run: env
