adds changesetBaseRefs to .yarnrc.yml

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,18 @@ enableGlobalCache: false
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-4.0.2.cjs
+
+changesetBaseRefs: [
+  "master",
+  "origin/master",
+  "upstream/master",
+  "main",
+  "origin/main",
+  "upstream/main",
+  "dev",
+  "origin/dev",
+  "upstream/dev",
+  "pretest",
+  "origin/pretest",
+  "upstream/pretest",
+]
