--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -83,9 +83,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install --immutable
+      - name: Clear Yarn cache
+        run: yarn cache clean
+
+      - name: Clear Yarn cache
+        run: yarn cache clean
+
+      # - name: Install dependencies
+      #   if: steps.cache.outputs.cache-hit != 'true'
+      #   run: yarn install --immutable
 
       - name: Version
         run: yarn workspaces foreach --worktree --topological --exclude @ohri/openmrs-esm-ohri version "$(node -e "console.log(require('semver').inc(require('./package.json').version, 'patch'))")-pre.${{ github.run_number }}"
