--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -63,14 +63,6 @@ jobs:
           node-version: '18'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Use full Git path
-        run: |
-          git --version
-          yarn --version
-
-      - name: Display environment variables
-        run: env
-
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -83,15 +75,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Clear Yarn cache
-        run: yarn cache clean
-
-      - name: Clear Yarn cache
-        run: yarn cache clean
-
-      # - name: Install dependencies
-      #   if: steps.cache.outputs.cache-hit != 'true'
-      #   run: yarn install --immutable
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install --immutable
 
       - name: Version
         run: yarn workspaces foreach --worktree --topological --exclude @ohri/openmrs-esm-ohri version "$(node -e "console.log(require('semver').inc(require('./package.json').version, 'patch'))")-pre.${{ github.run_number }}"
