tweaks to publish scripts

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,13 +85,25 @@ jobs:
       - name: Build
         run: yarn turbo run build --color --concurrency=5
 
-      - run: git config user.email "<>" && git config user.name "GitHub Actions Bot"
-      - run: git add . && git commit -m "Prerelease version" --no-verify
+      # - run: git config user.email "<>" && git config user.name "GitHub Actions Bot"
+      # - run: git add . && git commit -m "Prerelease version" --no-verify
 
-      - name: Pre-release
-        run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" && yarn run ci:prepublish
+      # - name: Pre-release
+      #   run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" && yarn run ci:prepublish
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
+      - name: setup git config
+        run: |
+           git config user.name "GitHub Actions Bot"
+           git config user.email "<>"
+      - name: commit
+        run: |
+           git add .
+           git commit -m "Prerelease version" --no-verify
+      - run: yarn run ci:prepublish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
