--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -32,7 +32,6 @@
   },
   "dependencies": {
     "@carbon/react": "^1.13.0",
-    "@openmrs/openmrs-form-engine-lib": "next",
     "fuzzy": "^0.1.3",
     "lodash-es": "^4.17.15",
     "moment": "^2.29.3",
@@ -42,15 +41,16 @@
   "peerDependencies": {
     "@openmrs/esm-framework": "5.x",
     "@openmrs/esm-patient-common-lib": "6.x",
+    "@openmrs/openmrs-form-engine-lib": "1.x",
     "dayjs": "1.x",
     "react": "18.x",
     "react-i18next": "11.x",
     "swr": "2.x"
   },
   "devDependencies": {
+    "@openmrs/openmrs-form-engine-lib": "next",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.1.1"
+    "webpack": "^5.88.2"
   }
 }
