--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ohri/openmrs-esm-ohri",
   "private": true,
+  "version": "2.1.0",
   "description": "OHRI MicroFrontend for OpenMRS SPA",
   "workspaces": [
     "packages/*"
@@ -37,57 +38,62 @@
     "@openmrs/esm-framework": "next",
     "@openmrs/esm-patient-common-lib": "next",
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.165",
-    "@swc/jest": "^0.2.20",
-    "@testing-library/dom": "^8.16.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^28.1.4",
+    "@swc/core": "^1.2.189",
+    "@swc/jest": "^0.2.29",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.182",
-    "@types/lodash-es": "^4.17.6",
+    "@types/lodash-es": "^4.17.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-dom": "^5.1.7",
     "@types/webpack-env": "^1.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@types/yup": "^0.29.11",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "browserslist-config-openmrs": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^6.3.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^3.2.0",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.2.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.5.1",
-    "husky": "^8.0.0",
-    "i18next": "^19.7.0",
-    "i18next-parser": "^5.4.0",
+    "husky": "^8.0.3",
+    "i18next": "^21.10.0",
+    "i18next-parser": "^6.6.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.2",
-    "jest-cli": "^28.1.2",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "jest-coverage-badges": "1.1.2",
-    "jest-environment-jsdom": "^28.1.2",
+    "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
     "openmrs": "next",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^2.0.2",
+    "prettier": "^3.1.1",
+    "pretty-quick": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "rxjs": "^6.6.3",
     "sass": "^1.54.3",
-    "swc-loader": "^0.1.15",
+    "sass-loader": "^10.1.0",
+    "semver": "^7.3.4",
+    "swc-loader": "^0.2.3",
     "swr": "^2.2.4",
     "systemjs-webpack-interop": "^2.3.7",
-    "turbo": "^1.5.5",
+    "turbo": "^1.6.3",
     "typescript": "^4.6.3",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.9.2",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.8.1"
   },
   "resolutions": {
