--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "concurrently": "^6.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "dayjs": "^1.11.10",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-ts-react-important-stuff": "^3.0.0",
