--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -16,4 +16,7 @@ changesetBaseRefs: [
   "dev",
   "origin/dev",
   "upstream/dev",
+  "test-prerelease",
+  "origin/test-prerelease",
+  "upstream/test-prerelease",
 ]
