--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,9 +2,11 @@ name: OHRI CI
 
 on:
   push:
-    branches: [master, working, dev]
+    branches: 
+      - dev
   pull_request:
-    branches: [master, working, dev]
+    branches: 
+      - dev 
   release:
     types:
       - created
@@ -167,34 +169,6 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/ohri-dev-frontend:next,${{ secrets.DOCKERHUB_USERNAME }}/ohri-dev-frontend:ci_${{ github.run_number }}
           cache-from: type=inline,ref=user/app:buildcache
           cache-to: type=inline,ref=user/app:buildcache,mode=max
-
-  dev_server_status:
-    if: github.ref == 'refs/heads/dev'
-    runs-on: ubuntu-latest
-    needs: docker_devserver_frontend
-
-    steps:
-      - name: Wait for 2 min - Let Images reflect on Docker Hub
-        run: sleep 300
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Copy files to /home/runner/
-        run: |
-          ls -la -t
-          cp -r $GITHUB_WORKSPACE/.github/.ssh/ /home/runner/
-
-      - name: List contents of /home/runner/
-        run: ls -la /home/runner/.ssh/
-
-      - name: webfactory/ssh-agent
-        uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.LL_SSH_PRIVATE_KEY }}
-
-      - name: Check SSH to remote OHRI Dev status
-        run: |
-            ssh-keygen -R 172.19.0.16
 
   dev_deploy:
     runs-on: ubuntu-latest
