OHRI-2089: Fix release CI to work with tags

--- a/.github/workflows/node.dev.js.yml
+++ b/.github/workflows/node.dev.js.yml
@@ -2,9 +2,11 @@ name: OHRI CI
 
 on:
   push:
-    branches: [master, working, dev]
+    branches:
+      - dev
   pull_request:
-    branches: [master, working, dev]
+    branches:
+      - dev
   release:
     types:
       - created
