--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,10 @@ build/**
 
 # vscode
 .vscode
+
+# Playwright and e2e tests
+/test-results/
+/playwright-report/
+/playwright/.cache/
+e2e/storageState.json
+.env
