--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -52,3 +52,12 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+  github-action:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Run Playwright tests with GitHub Action
+        run: yarn playwright test
