--- a/packages/esm-ohri-pmtct-app/package.json
+++ b/packages/esm-ohri-pmtct-app/package.json
@@ -36,7 +36,8 @@
     "url": "https://github.com/UCSF-IGHS/openmrs-esm-ohri/issues"
   },
   "dependencies": {
-    "@carbon/react": "^1.13.0"
+    "@carbon/react": "^1.13.0",
+    "@openmrs/openmrs-form-engine-lib": "next"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "5.x",
