--- a/.github/workflows/node.dev.js.yml
+++ b/.github/workflows/node.dev.js.yml
@@ -48,8 +48,24 @@ jobs:
         with:
           name: packages
           path: |
-            packages/**/dist
+            packages/**/dist     
+                     
+  run_e2e_tests:
+    runs-on: ubuntu-latest
 
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: yarn install --immutable
+      - name: Install Playwright Browsers
+        run: npx playwright install chromium --with-deps
+      - name: Run Playwright tests
+        run: yarn test-e2e
+          
   pre_release:
     runs-on: ubuntu-latest
 
