--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # This is an environment file for configuring dynamic values.
-E2E_BASE_URL=https://ohri-dev.globalhealthapp.net/openmrs
+E2E_BASE_URL=https://ohri-dev-staging.globalhealthapp.net/openmrs
 E2E_USER_ADMIN_USERNAME=admin
 E2E_USER_ADMIN_PASSWORD=Admin123
 E2E_LOGIN_DEFAULT_LOCATION_UUID=44c3efb0-2583-4c80-a79e-1f756a03c0a1
