--- a/packages/esm-tb-app/package.json
+++ b/packages/esm-tb-app/package.json
@@ -47,7 +47,6 @@
     "swr": "2.x"
   },
   "devDependencies": {
-    "webpack": "^5.88.2",
-    "@openmrs/esm-patient-common-lib": "workspace:*"
+    "webpack": "^5.88.2"
   }
 }
