--- a/.github/workflows/node.dev.js.yml
+++ b/.github/workflows/node.dev.js.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
@@ -48,8 +48,8 @@ jobs:
         with:
           name: packages
           path: |
-            packages/**/dist     
-                     
+            packages/**/dist
+
   run_e2e_tests:
     runs-on: ubuntu-latest
 
@@ -65,7 +65,7 @@ jobs:
         run: npx playwright install chromium --with-deps
       - name: Run Playwright tests
         run: yarn test-e2e
-          
+
   pre_release:
     runs-on: ubuntu-latest
 
