--- a/.github/workflows/node.dev.js.yml
+++ b/.github/workflows/node.dev.js.yml
@@ -85,10 +85,7 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: |
-            **/node_modules
-            **/yarn.lock
-
+          path: '**/node_modules'
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
