--- a/packages/esm-commons-lib/package.json
+++ b/packages/esm-commons-lib/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@carbon/react": "^1.13.0",
-    "@openmrs/openmrs-form-engine-lib": "next",
+    "@openmrs/openmrs-form-engine-lib": "1.0.0-pre.556",
     "fuzzy": "^0.1.3",
     "lodash-es": "^4.17.15",
     "systemjs-webpack-interop": "^2.3.7",
