--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,29 @@
 {
-    "compilerOptions": {
-      "esModuleInterop": true,
-      "module": "esnext",
-      "allowSyntheticDefaultImports": true,
-      "jsx": "react",
-      "skipLibCheck": true,
-      "moduleResolution": "node",
-      "lib": [
-        "dom",
-        "es5",
-        "es6",
-        "scripthost",
-        "es2015",
-        "es2015.promise",
-        "es2016.array.include",
-        "es2018",
-        "es2020"
-      ],
-      "resolveJsonModule": true,
-      "noEmit": true,
-      "target": "esnext",
-      "paths": {
-        "@openmrs/*": ["./node_modules/@openmrs/*"]
-      }
-    }
-  }
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "jsx": "react",
+    "lib": [
+      "dom",
+      "es5",
+      "scripthost",
+      "es2015",
+      "es2015.promise",
+      "es2016.array.include",
+      "es2018",
+      "es2020"
+    ],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "paths": {
+      "@openmrs/*": ["./node_modules/@openmrs/*"],
+      "__mocks__": ["./__mocks__"],
+      "tools": ["./tools"],
+    },
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "target": "esnext",
+    "typeRoots": ["./node_modules/@types", "./node_modules/testing-library"]
+  },
+}
