--- a/packages/esm-form-render-app/package.json
+++ b/packages/esm-form-render-app/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "@carbon/react": "^1.13.0",
     "@openmrs/openmrs-form-engine-lib": "2.0.0-pre.1029",
-    "ace-builds": "^1.4.12",
+    "ace-builds": "1.34.1",
     "react-ace": "^9.4.4"
   },
   "peerDependencies": {
