--- a/packages/esm-cervical-cancer-app/src/views/cacx-visits/cacx-config.json
+++ b/packages/esm-cervical-cancer-app/src/views/cacx-visits/cacx-config.json
@@ -73,9 +73,9 @@
         {
           "id": "screeningResult",
           "title": "Screening Results",
-          "concept": ["9096a18e-c009-4f4c-b0ba-0605e0f16578", "159859AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA","28bab50e-7ff7-4216-81be-3f7ad05c6547", "cc647244-0826-4d8e-8c5a-d7a371267bf4"],
-          "useMultipleObs": true  
-        },
+          "multipleConcepts": ["9096a18e-c009-4f4c-b0ba-0605e0f16578", "159859AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA","28bab50e-7ff7-4216-81be-3f7ad05c6547", "cc647244-0826-4d8e-8c5a-d7a371267bf4"],
+          "useMultipleObs": true
+        },        
         {
           "id": "cacxTreatment",
           "title": "CaCx Treatment",
