--- a/packages/esm-hiv-care-treatment-app/src/views/visits/clinical-visit-config.json
+++ b/packages/esm-hiv-care-treatment-app/src/views/visits/clinical-visit-config.json
@@ -5,43 +5,43 @@
       "tabName": "Clinical Visit",
       "headerTitle": "Clinical Visit",
       "displayText": "clinical visit encounters",
-      "encounterType": "cb0a65a7-0587-477e-89b9-cf2fd144f1d4",
+      "encounterType": "clinicalVisitEncounterType",
       "columns": [
         {
           "id": "clinicalVisitDate",
           "isDate": true,
           "title": "Visit Date",
-          "concept": "163137AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+          "concept": "dateOfEncounterConcept",
           "isLink": true
         },
         {
           "id": "clinicalVisitType",
           "title": "Visit Type",
-          "concept": "8a9809e9-8a0b-4e0e-b1f6-80b0cbbe361b"
+          "concept": "visitTypeConcept"
         },
         {
           "id": "clinicalScreeningOutcome",
           "title": "TB Screening Outcome",
-          "concept": "160108AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+          "concept": "tbScreeningOutcome"
         },
         {
           "id": "clinicalNextAppointmentDate",
           "title": "Next Appointment Date",
           "isDate": true,
-          "concept": "5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+          "concept": "returnVisitDateConcept"
         },
         {
           "id": "actions",
           "title": "Actions",
           "actionOptions": [
             {
-              "formName": "POC Clinical Visit Form v2",
+              "formName": "ClinicalVisitFormName",
               "package": "hiv-care-treatment",
               "label": "View Details",
               "mode": "view"
             },
             {
-              "formName": "POC Clinical Visit Form v2",
+              "formName": "ClinicalVisitFormName",
               "package": "hiv-care-treatment",
               "label": "Edit Form",
               "mode": "edit"
@@ -55,8 +55,8 @@
       },
       "formList": [
         {
-          "name": "POC Clinical Visit Form v2",
-          "uuid": "b3abc4ce-c5ac-3c40-b8e7-442b163670f1"
+          "name": "ClinicalVisitFormName",
+          "uuid": "clinicalVisitFormUuid"
         }
       ]
     }
