--- a/packages/esm-hiv-care-treatment-app/src/views/program-management/program-management-config.json
+++ b/packages/esm-hiv-care-treatment-app/src/views/program-management/program-management-config.json
@@ -5,50 +5,48 @@
       "tabName": "HIV Enrolment",
       "headerTitle": "HIV Enrolment",
       "displayText": "HIV Enrolment",
-      "encounterType": "7e54cd64-f9c3-11eb-8e6a-57478ce139b0",
+      "encounterType": "careAndTreatmentEncounterType",
       "columns": [
         {
           "id": "date",
           "isDate": true,
           "title": "Enrollment/Re-enrollment Date",
-          "concept": "20efadf9-86d3-4498-b3ab-7da4dad9c429",
-          "fallbackConcepts": [
-            "160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-          ]
+          "concept": "re_enrolmentDateConcept",
+          "fallbackConcepts": ["enrolmentDate"]
         },
         {
           "id": "clientDescription",
           "title": "Patient Type at Enrollment",
-          "concept": "83e40f2c-c316-43e6-a12e-20a338100281"
+          "concept": "patientTypeEnrollmentConcept"
         },
         {
           "id": "dateConfirmedPositive",
           "isDate": true,
           "title": "Date Confirmed HIV+",
-          "concept": "160554AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+          "concept": "dateOfHIVDiagnosisConcept"
         },
         {
           "id": "entryPoint",
           "title": "Entry Point",
-          "concept": "160540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+          "concept": "entryPointConcept"
         },
         {
           "id": "populationCategory",
           "title": "Population Category",
-          "concept": "166432AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+          "concept": "populationCategoryConcept"
         },
         {
           "id": "actions",
           "title": "Actions",
           "actionOptions": [
             {
-              "formName": "Service Enrolment Form",
+              "formName": "ServiceEnrolmentFormName",
               "package": "hiv-care-treatment",
               "label": "View Details",
               "mode": "view"
             },
             {
-              "formName": "Service Enrolment Form",
+              "formName": "ServiceEnrolmentFormName",
               "package": "hiv-care-treatment",
               "label": "Edit Form",
               "mode": "edit"
@@ -58,12 +56,12 @@
       ],
       "launchOptions": {
         "displayText": "Add",
-        "moduleName": "@ohri/openmrs-esm-ohri-hiv-app"
+        "moduleName": "@ohri/openmrs-esm-ohri-hiv-care-treatment-app"
       },
       "formList": [
         {
-          "name": "Service Enrolment Form",
-          "uuid": "8f713e0e-94a0-3c57-9024-69520933802a"
+          "name": "ServiceEnrolmentFormName",
+          "uuid": "serviceEnrolmentFormUuid"
         }
       ]
     },
@@ -71,7 +69,7 @@
       "tabName": "ART Therapy",
       "headerTitle": "ART Therapy",
       "displayText": "ART Therapy",
-      "encounterType": "74bf4fe6-8fdb-4228-be39-680a93a9cf6d",
+      "encounterType": "art_Therapy_EncounterUUID",
       "columns": [
         {
           "id": "initiationDate",
@@ -79,45 +77,47 @@
           "title": "Date",
           "type": "artDate",
           "conceptMappings": [
-            "159599AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-            "162572AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-            "164516AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-            "164431AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-            "160738AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+            "artTherapyDateTime_UUID",
+            "artStopDateUUID",
+            "switchDateUUID",
+            "substitutionDateUUID",
+            "dateRestartedUUID"
           ]
         },
         {
           "id": "therapyPlan",
           "title": "Therapy Plan",
           "type": "artTherapy",
-          "concept": "7557d77c-172b-4673-9335-67a38657dd01",
+          "concept": "therapyPlanConcept",
           "valueMappings": {
-            "1256AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA": "Start ART",
-            "1258AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA": "Substitute ART Regimen",
-            "1259AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA": "Switch ART Regimen Line",
-            "1260AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA": "Stop ART",
-            "3e69cb60-2943-410f-83d4-b359ae83fefd": "Restart ART therapy"
+            "Start ART": "startART",
+            "Substitute ART Regimen": "substituteART",
+            "Switch ART Regimen Line": "switchART",
+            "Stop ART": "stopART",
+            "Restart ART therapy": "restartART"
           }
+
         },
         {
           "id": "regimen",
           "title": "Regimen",
-          "concept": "dfbe256e-30ba-4033-837a-2e8477f2e7cd"
+          "concept": "regimenConcept"
         },
         {
           "id": "regimenInitiated",
           "title": "Regimen line",
-          "concept": "164515AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+          "concept": "regimenLine_UUID"
         },
         {
           "id": "reason",
           "title": "Reason",
           "conceptMappings": [
-            "160568AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-            "160562AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-            "163513AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-            "161011AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+            "switchReasonUUID",
+            "substituteReasonUUID",
+            "stopReasonUUID",
+            "freeTextCommentConcept"
           ],
+          "concept": "artTherapyDateTime_UUID",
           "type": "artReason"
         },
         {
@@ -125,232 +125,13 @@
           "title": "Actions",
           "actionOptions": [
             {
-              "formName": "ART Therapy Form",
+              "formName": "ARTTherapyFormName",
               "package": "hiv",
               "label": "View Details",
               "mode": "view"
             },
             {
-              "formName": "ART Therapy Form",
-              "package": "hiv",
-              "label": "Edit Forms",
-              "mode": "edit"
-            }
-          ]
-        }
-      ],
-      "launchOptions": {
-        "displayText": "Add",
-        "moduleName": "@ohri/openmrs-esm-ohri-hiv-app"
-      },
-      "formList": [
-        {
-          "name": "ART Therapy Form",
-          "uuid": "f99fadd8-feb7-321c-ab58-7569805668e7"
-        }
-      ]
-    },
-    {
-      "tabName": "Service Delivery Model",
-      "headerTitle": "Service Delivery Model",
-      "displayText": "Service Delivery Model",
-      "encounterType": "62ee5922-a229-48d3-a1da-875c1ffa9436",
-      "columns": [
-        {
-          "id": "vlDate",
-          "isDate": true,
-          "title": "Date",
-          "concept": "160753AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-        },
-        {
-          "id": "dsdStatus",
-          "title": "Status",
-          "concept": "8742967d-8107-4cbb-a17e-9a8c7f624673"
-        },
-        {
-          "id": "dsdModel",
-          "title": "DSD Model",
-          "concept": "52824cbe-0e4d-4c18-8179-80b5799f34ed"
-        },
-        {
-          "id": "actions",
-          "title": "Actions",
-          "actionOptions": [
-            {
-              "formName": "Service Delivery Model Form",
-              "package": "hiv",
-              "label": "View Details",
-              "mode": "view"
-            },
-            {
-              "formName": "Service Delivery Model Form",
-              "package": "hiv",
-              "label": "Edit Forms",
-              "mode": "edit"
-            }
-          ]
-        }
-      ],
-      "launchOptions": {
-        "displayText": "Add",
-        "moduleName": "@ohri/openmrs-esm-ohri-hiv-app"
-      },
-      "formList": [
-        {
-          "name": "Service Delivery Model Form",
-          "uuid": "1e14f841-b42b-3273-93db-807927ca9a82"
-        }
-      ]
-    },
-    {
-      "tabName": "Transfer Out",
-      "headerTitle": "Transfer Out",
-      "displayText": "Transfer Out",
-      "encounterType": "3044916a-7e5f-478b-9091-803233f27f91",
-      "columns": [
-        {
-          "id": "visitDate",
-          "isDate": true,
-          "title": "Visit Date",
-          "concept": "163137AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-        },
-        {
-          "id": "reasonsForTesting",
-          "title": "Receiving Facility",
-          "concept": "162724AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-        },
-        {
-          "id": "tranferOutDate",
-          "title": "Transfer-Out Date",
-          "isDate": true,
-          "concept": "160649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-        },
-        {
-          "id": "verified",
-          "title": "Verified",
-          "concept": "797e0073-1f3f-46b1-8b1a-8cdad134d2b3"
-        },
-        {
-          "id": "actions",
-          "title": "Actions",
-          "actionOptions": [
-            {
-              "formName": "Transfer Out Form",
-              "package": "hiv",
-              "label": "View Details",
-              "mode": "view"
-            },
-            {
-              "formName": "Transfer Out Form",
-              "package": "hiv",
-              "label": "Edit Forms",
-              "mode": "edit"
-            }
-          ]
-        }
-      ],
-      "launchOptions": {
-        "displayText": "Add",
-        "moduleName": "@ohri/openmrs-esm-ohri-hiv-app"
-      },
-      "formList": [
-        {
-          "name": "Transfer Out Form",
-          "uuid": "a969288d-6605-361b-b01c-42f6ef25c0f5"
-        }
-      ]
-    },
-    {
-      "tabName": "Patient Tracing",
-      "headerTitle": "Patient Tracing",
-      "displayText": "Patient Tracing",
-      "encounterType": "0cd5d4cb-204e-419a-9dd7-1e18e939ce4c",
-      "columns": [
-        {
-          "id": "contactDate",
-          "isDate": true,
-          "title": "Contact Date",
-          "concept": "160753AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-        },
-        {
-          "id": "contactMethod",
-          "title": "Contact Method",
-          "concept": "59c023dd-eed2-4b11-8c34-b88e9439db3c"
-        },
-        {
-          "id": "contactOutcome",
-          "title": "Contact Outcome",
-          "concept": "bc45edbd-11e7-4888-ad7d-4ec3dd8cdcf6"
-        },
-        {
-          "id": "actions",
-          "title": "Actions",
-          "actionOptions": [
-            {
-              "formName": "Patient Tracing Form",
-              "package": "hiv",
-              "label": "View Details",
-              "mode": "view"
-            },
-            {
-              "formName": "Patient Tracing Form",
-              "package": "hiv",
-              "label": "Edit Forms",
-              "mode": "edit"
-            }
-          ]
-        }
-      ],
-      "launchOptions": {
-        "displayText": "Add",
-        "moduleName": "@ohri/openmrs-esm-ohri-hiv-app"
-      },
-      "formList": [
-        {
-          "name": "Patient Tracing Form",
-          "uuid": "71f3febd-dd11-322b-9c18-2a8a07d87af1"
-        }
-      ]
-    },
-    {
-      "tabName": "Death",
-      "headerTitle": "Death",
-      "displayText": "Death",
-      "encounterType": "15272be5-ae9c-4278-a303-4b8907eae73b",
-      "columns": [
-        {
-          "id": "deathDate",
-          "isDate": true,
-          "title": "Death Date",
-          "concept": "1543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-        },
-        {
-          "id": "deathCause",
-          "title": "Cause of Death",
-          "concept": "ef973f1f-557f-4620-acf5-9c4c18bf1eda"
-        },
-        {
-          "id": "specificDeathCause",
-          "title": "Specific cause of Death",
-          "concept": "e329cdf4-4eeb-4821-85ec-80ec4b503de0"
-        },
-        {
-          "id": "regimenInitiated",
-          "title": "Regimen line",
-          "concept": "164515AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-        },
-        {
-          "id": "actions",
-          "title": "Actions",
-          "actionOptions": [
-            {
-              "formName": "Death Form",
-              "package": "hiv",
-              "label": "View Details",
-              "mode": "view"
-            },
-            {
-              "formName": "Death Form",
+              "formName": "ARTTherapyFormName",
               "package": "hiv",
               "label": "Edit Forms",
               "mode": "edit"
@@ -364,8 +145,228 @@
       },
       "formList": [
         {
-          "name": "Death Form",
-          "uuid": "41af2def-841d-38b7-8d2e-df25bdd0b73f"
+          "name": "ARTTherapyFormName",
+          "uuid": "artTherapyFormUuid"
+        }
+      ]
+    },
+    {
+      "tabName": "Service Delivery Model",
+      "headerTitle": "Service Delivery Model",
+      "displayText": "Service Delivery Model",
+      "encounterType": "ServiceDeliveryEncounterType_UUID",
+      "columns": [
+        {
+          "id": "vlDate",
+          "isDate": true,
+          "title": "Date",
+          "concept": "dateOfEventConcept"
+        },
+        {
+          "id": "dsdStatus",
+          "title": "Status",
+          "concept": "DSDStatus_UUID"
+        },
+        {
+          "id": "dsdModel",
+          "title": "DSD Model",
+          "concept": "CommunityDSDModel_UUID"
+        },
+        {
+          "id": "actions",
+          "title": "Actions",
+          "actionOptions": [
+            {
+              "formName": "ServiceDeliveryFormName",
+              "package": "hiv",
+              "label": "View Details",
+              "mode": "view"
+            },
+            {
+              "formName": "ServiceDeliveryFormName",
+              "package": "hiv",
+              "label": "Edit Forms",
+              "mode": "edit"
+            }
+          ]
+        }
+      ],
+      "launchOptions": {
+        "displayText": "Add",
+        "moduleName": "@ohri/openmrs-esm-ohri-hiv-care-treatment-app"
+      },
+      "formList": [
+        {
+          "name": "ServiceDeliveryFormName",
+          "uuid": "serviceDeliveryFormUuid"
+        }
+      ]
+    },
+    {
+      "tabName": "Transfer Out",
+      "headerTitle": "Transfer Out",
+      "displayText": "Transfer Out",
+      "encounterType": "transferOutEncounterType_UUID",
+      "columns": [
+        {
+          "id": "visitDate",
+          "isDate": true,
+          "title": "Visit Date",
+          "concept": "dateOfEncounterConcept"
+        },
+        {
+          "id": "reasonsForTesting",
+          "title": "Receiving Facility",
+          "concept": "receivingFacility_UUID"
+        },
+        {
+          "id": "tranferOutDate",
+          "title": "Transfer-Out Date",
+          "isDate": true,
+          "concept": "TransferOutDate_UUID"
+        },
+        {
+          "id": "verified",
+          "title": "Verified",
+          "isTrueFalseConcept": true,
+          "concept": "verified_UUID"
+        },
+        {
+          "id": "actions",
+          "title": "Actions",
+          "actionOptions": [
+            {
+              "formName": "TransferOutFormName",
+              "package": "hiv",
+              "label": "View Details",
+              "mode": "view"
+            },
+            {
+              "formName": "TransferOutFormName",
+              "package": "hiv",
+              "label": "Edit Forms",
+              "mode": "edit"
+            }
+          ]
+        }
+      ],
+      "launchOptions": {
+        "displayText": "Add",
+        "moduleName": "@ohri/openmrs-esm-ohri-hiv-care-treatment-app"
+      },
+      "formList": [
+        {
+          "name": "TransferOutFormName",
+          "uuid": "transferOutFormUuid"
+        }
+      ]
+    },
+    {
+      "tabName": "Patient Tracing",
+      "headerTitle": "Patient Tracing",
+      "displayText": "Patient Tracing",
+      "encounterType": "PatientTracingEncounterType_UUID",
+      "columns": [
+        {
+          "id": "contactDate",
+          "isDate": true,
+          "title": "Contact Date",
+          "concept": "dateOfEventConcept"
+        },
+        {
+          "id": "contactMethod",
+          "title": "Contact Method",
+          "concept": "contactMethodConcept"
+        },
+        {
+          "id": "contactOutcome",
+          "title": "Contact Outcome",
+          "concept": "ContactOutcome_UUID"
+        },
+        {
+          "id": "actions",
+          "title": "Actions",
+          "actionOptions": [
+            {
+              "formName": "PatientTracingFormName",
+              "package": "hiv",
+              "label": "View Details",
+              "mode": "view"
+            },
+            {
+              "formName": "PatientTracingFormName",
+              "package": "hiv",
+              "label": "Edit Forms",
+              "mode": "edit"
+            }
+          ]
+        }
+      ],
+      "launchOptions": {
+        "displayText": "Add",
+        "moduleName": "@ohri/openmrs-esm-ohri-hiv-care-treatment-app"
+      },
+      "formList": [
+        {
+          "name": "PatientTracingFormName",
+          "uuid": "patientTracingFormUuid"
+        }
+      ]
+    },
+    {
+      "tabName": "Death",
+      "headerTitle": "Death",
+      "displayText": "Death",
+      "encounterType": "hivLabResultsEncounterType_UUID",
+      "columns": [
+        {
+          "id": "deathDate",
+          "isDate": true,
+          "title": "Death Date",
+          "concept": "hivDeathDate_UUID"
+        },
+        {
+          "id": "deathCause",
+          "title": "Cause of Death",
+          "concept": "causeOFDeath_UUID"
+        },
+        {
+          "id": "specificDeathCause",
+          "title": "Specific cause of Death",
+          "concept": "deathSpecific_UUID"
+        },
+        {
+          "id": "regimenInitiated",
+          "title": "Regimen line",
+          "concept": "regimenLine_UUID"
+        },
+        {
+          "id": "actions",
+          "title": "Actions",
+          "actionOptions": [
+            {
+              "formName": "deathFormName",
+              "package": "hiv",
+              "label": "View Details",
+              "mode": "view"
+            },
+            {
+              "formName": "deathFormName",
+              "package": "hiv",
+              "label": "Edit Forms",
+              "mode": "edit"
+            }
+          ]
+        }
+      ],
+      "launchOptions": {
+        "displayText": "Add",
+        "moduleName": "@ohri/openmrs-esm-ohri-hiv-care-treatment-app"
+      },
+      "formList": [
+        {
+          "name": "deathFormName",
+          "uuid": "deathFormUuid"
         }
       ]
     }
