Updated Husky files (pre-commit, pre-push) and package.json for lint-staged integration to improve code quality checks.

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,12 @@
           }
         ]
       }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   }
 }
