fix the missing concept

--- a/packages/esm-hiv-care-treatment-app/src/views/general-counselling/general-conselling-config.json
+++ b/packages/esm-hiv-care-treatment-app/src/views/general-counselling/general-conselling-config.json
@@ -119,7 +119,7 @@
       "formList": [
         {
           "name": "IntimatePartnerFormName",
-          "uuid": "5c37314f-c558-3720-8780-d123c70f4e23"
+          "uuid": "intimatePartnerFormUuid"
         }
       ]
     },
